scrollbar styling fix

--- a/packages/ui/src/style.css
+++ b/packages/ui/src/style.css
@@ -1,16 +1,14 @@
-/* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 15px;
+  height: 15px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background-color: #1d2028;
   border-radius: 10px;
   padding: 3px;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background-color: #8a8b8f;
   border: 5px solid #1d2028;
@@ -18,7 +16,6 @@
   border-radius: 10px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #8a8b8f;
 }
